made changes to nav bar when collapsed ,fixed small formatting things

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,56 @@ html, body {
     background-color: #D9DADB;
     margin: 0;
     min-height: 100%;
-    position: relative;
 }
 /* ^ BODY ^ */
 
 
 /* V NAV BAR V */
+
+nav > .hidden{
+    display: none;
+}
+
+@media screen and (max-width: 800px) {
+    nav > ul > li {
+        display: none;
+    }
+
+    nav > ul {
+        height: 0;
+    }
+
+    nav > .hidden{
+        display: block;
+        margin-bottom: 20px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 300;
+        background-color: white;
+        height: 3.7em;
+        padding: 0 30px 0 30px;
+    }
+
+    nav > .hidden > a.icon {
+        display: block;
+        font-size: 33px;
+        color: #9d9d9d;
+        float: right;
+    }
+    nav.responsive {
+        position: relative;
+    }
+    nav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    nav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;   
+    }
+  }
+
 nav > ul {
     list-style-type: none;
     margin: 0;
@@ -74,6 +118,28 @@ main {
     overflow:auto;
     min-height: 100%;
     height: 100%
+}
+/* V HEADER V */
+
+/* ^ HEADER ^ */
+
+
+/* V FOOTER V */
+footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;
+    background-color: white;
+    padding: 30px 0 30px 0;
+    margin: 0;
+}
+
+footer > p{
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    font-weight: 200;
+    text-align: center;
 }
 /* ^ MAIN ^ */
 
@@ -186,13 +252,15 @@ main {
 .customers_page > header > #addcustomer{
     grid-area: button;
     align-items: center;
+    padding: 30px 0 0 50px;
 }
 
 .customers_page >  #info1 {
     grid-area: a;
     background-color: #9F9D56;
-    padding: 50px;
+    padding: 51px 50px 50px 51px;
     margin: 20px 0 0 20px;
+    
 }
 
 .customers_page > #buttons1 {
@@ -205,7 +273,7 @@ main {
 .customers_page > #info2 {
     grid-area: c;
     background-color: #9F9D56;
-    padding: 50px;
+    padding: 51px 50px 50px 51px;
     margin: 0 0 0 20px;
 }
 
@@ -219,7 +287,7 @@ main {
 .customers_page > #info3 {
     grid-area: e;
     background-color: #9F9D56;
-    padding: 50px;
+    padding: 51px 50px 50px 51px;
     margin: 0 0 20px 20px;
 }
 
@@ -236,16 +304,21 @@ main {
 .clear {
     clear: both; 
     height: 120px;
+    margin: 20px 0 20px 0;
 }
 
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 60px;
     background-color: white;
     padding: 30px 0 30px 0;
     margin: 0;
+}
+
+#index_footer {
+    position: absolute;
 }
 
 footer > p {
